--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,6 @@ jobs:
           name: deploy
           command: |
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
             gcloud app deploy --quiet  app.yaml --promote --project $GOOGLE_PROJECT_ID --zone $GOOGLE_COMPUTE_ZONE
